--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -419,6 +419,11 @@ button
 			text-align: center
 			justify-content: center
 @media screen and (max-width: 375px)
+	.title
+		font-size: 30px
+	.home
+		&__title
+			font-size: 30px
 	.description
 		&__title
 			font-size: 30px
