--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -65,7 +65,8 @@ button
 	pointer-events: none
 .logo
 	max-width: 190px
-	min-height: 46px
+	width: 160px
+	height: 46px
 .title
 	font-family: 'Roboto Bold'
 	font-size: 40px
