--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -67,6 +67,9 @@ button
 	max-width: 190px
 	width: 160px
 	height: 46px
+.test
+	width: 160px
+	height: 46px
 .title
 	font-family: 'Roboto Bold'
 	font-size: 40px
