--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -31,6 +31,9 @@ $sprite: url('../img/sprite.webp')
 	margin: 0
 	padding: 0
 	box-sizing: border-box
+use
+	width: inherit
+	height: inherit
 body
 	margin: 0
 	padding: 0
