--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -31,9 +31,6 @@ $sprite: url('../img/sprite.webp')
 	margin: 0
 	padding: 0
 	box-sizing: border-box
-use
-	width: inherit
-	height: inherit
 body
 	margin: 0
 	padding: 0
@@ -69,6 +66,12 @@ button
 .logo
 	width: 160px
 	height: 46px
+.location
+	width: 25px
+	height: 25px
+.arrow
+	width: 67px
+	height: 24px
 .test
 	width: 160px
 	height: 46px
