--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -240,6 +240,10 @@ button
 			fill: currentColor
 		&:hover
 			color: $second-color
+		& svg
+			fill: currentColor
+		& svg:hover
+			fill: currentColor
 		&:last-child
 			& svg
 				transform: rotate(180deg)
