--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -239,7 +239,7 @@ button
 		&:hover
 			color: $second-color
 		& svg
-			fill: currentColor
+			fill: #fff
 		& svg:hover
 			fill: currentColor
 		&:last-child
