--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -238,10 +238,10 @@ button
 		animation-duration: 200ms
 		&:hover
 			color: $second-color
+			& svg
+			fill: currentColor
 		& svg
 			fill: #fff
-		& svg:hover
-			fill: currentColor
 		&:last-child
 			& svg
 				transform: rotate(180deg)
