--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -238,8 +238,7 @@ button
 		animation-duration: 200ms
 		&:hover
 			color: $second-color
-			& svg
-			fill: currentColor
+			fill: $second-color
 		& svg
 			fill: #fff
 		&:last-child
