--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -238,9 +238,10 @@ button
 		animation-duration: 200ms
 		&:hover
 			color: $second-color
-			fill: $second-color
 		& svg
 			fill: #fff
+		&:hover svg
+			fill: currentColor
 		&:last-child
 			& svg
 				transform: rotate(180deg)
