--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -66,16 +66,19 @@ button
 .logo
 	width: 160px
 	height: 46px
-	fill: #fff
+	fill: $second-color
 .location
 	width: 25px
 	height: 25px
+	fill: $standard-color
 .arrow
 	width: 67px
 	height: 24px
+	fill: $standard-color
 .airplane
 	width: 30px
 	height: 30px
+	fill: $standard-color
 .test
 	width: 160px
 	height: 46px
