--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -52,10 +52,15 @@ button
 	border: none
 	background: none
 	color: $standard-color
+._hide
+	display: none
+	transition: 200ms
 .container
 	max-width: 1140px
 	margin: 0 auto
 	padding: 0 15px
+.hide
+	display: none
 .active
 	opacity: 0.5
 	pointer-events: all
@@ -264,6 +269,7 @@ button
 	margin: 0
 	margin-bottom: 120px
 	padding: 0
+	transition: 200ms
 	&__line
 	&__title
 		margin-bottom: 60px
@@ -290,6 +296,7 @@ button
 .about-company
 	margin: 0
 	padding: 0
+	transition: 200ms
 	&__container
 		position: relative
 	&__background
